# YOLOv5-OpenCV-ORT-OnnxRunner

./: .gitignore  README.md
onnxruntime/: CMakeLists.txt  main.cpp  main.py
opencv/: CMakeLists.txt  main.cpp
